Nullable related test case for RealmResults